Interfaz listview Personalizado terminada

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,13 +14,14 @@
     <string name="femenino">Femenino</string>
     <string name="sexo">Sexo</string>
     <string name="cuantas_mujeres">Cuantas mujeres agregadas</string>
-
+    <string name="listado_listview">Listado Persona Listview</string>
     <string name="cuantos_hombres">Cuantos hombres agregados</string>
     <string-array name="opciones">
         <item>@string/crear_personas</item>
         <item>@string/listar_personas</item>
         <item>@string/cuantas_mujeres</item>
         <item>@string/cuantos_hombres</item>
+        <item>@string/listado_listview</item>
     </string-array>
     <string-array name="sexo">
         <item>@string/masculino</item>
